--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -5,10 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Cid</th>
       <th>Name</th>
       <th>Master</th>
-      <th>Last updated at</th>
+      <th>Active</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,12 +15,12 @@
   <tbody>
     <% @channels.each do |channel| %>
       <tr>
-        <td><%= channel.cid %></td>
         <td><%= channel.name %></td>
         <td><%= channel.master %></td>
+        <td><%= channel.active %></td>
         <td><%= link_to 'Show', channel %></td>
         <td><%= link_to 'Edit', edit_channel_path(channel) %></td>
-        <td><%= link_to 'Destroy', channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Archive', channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
