Use original implementation for Auth

--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Login with Slack', '/auth/slack', data: { turbolinks: false } %>
+<%= link_to 'Login with Slack', '/auth/slack_signin', data: { turbolinks: false } %>
