Find uid for master

--- a/app/views/channels/unarchive/new.html.erb
+++ b/app/views/channels/unarchive/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= form.label :master %>
-    <%= form.text_field :master, placeholder: '@someone' %>
+    <%= form.text_field :master, placeholder: 'someone (no @ prefix)' %>
   </div>
 
   <div class="actions">
