--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -15,6 +15,8 @@
   <%= @channel.master %>
 </p>
 
+<h3>Last 10 Messages</h3>
+
 <ul>
   <% @messages.each do |message| %>
     <li><%= "#{message.created_at.strftime('%m/%d %T')} #{message.user}: #{message.text}"%></li>
