--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -8,7 +8,7 @@
       <th>Name</th>
       <th>Master</th>
       <th>Active</th>
-      <th>Warned At</th>
+      <th>Last message before</th>
       <th colspan="2"></th>
     </tr>
   </thead>
@@ -19,7 +19,7 @@
         <td><%= channel.name %></td>
         <td><%= channel.master %></td>
         <td><%= channel.active %></td>
-        <td><%= channel.warned_at&.strftime('%m/%d %T') %></td>
+        <td><%= channel.days_from_last_message %> Days ago</td>
         <td><%= link_to 'Show', channel %></td>
         <td>
           <% if channel.active %>
