Accept uid instead of display name

--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :master %>
-    <%= form.text_field :master, id: :channel_master %>
+    <%= form.text_field :master, id: :channel_master, placeholder: 'member id' %>
   </div>
 
   <div class="actions">
